--- a/ChatClient/ChatClient.csproj
+++ b/ChatClient/ChatClient.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.36" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SharedSecurity\SharedSecurity.csproj" />
+  </ItemGroup>
+
 </Project>
